--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,8 +1,8 @@
-body {
-  margin: 10;
-  font-family: "Lucida Grande";
+h1 {
+color: #0000ff;
 }
 
-a {
-  text-decoration: none;
+h2 {
+  color: #ff0000;
+  
 }
