--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,8 +1,22 @@
-h1 {
-color: #0000ff;
+body {
+  font-family: "Avenir Next";
 }
 
-h2 {
-  color: #ff0000;
-  
+li {
+  list-style: none;
+}
+
+.header {
+  background-color: #f7f2b4;
+  height: 90px;
+}
+
+.main {
+  background-color: #bdf7f1;
+  height: 600px;
+}
+
+.footer {
+  background-color: #ceccf3;
+  height: 270px;
 }
